# probabilistic-forecasting

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
configs/: config.yaml  model_params.yaml
docs/: architecture.md
docs/images/: results_table.md
experiments/: calibration_experiment.md
metrics/: baselines_results.json  calibration_results.json  deepar_results.json  full_results_table.json  recalibration_results.json
notebooks/: 01_eda.ipynb
pipelines/: generate_figures.py  run_all.py  run_baselines.py  run_deepar.py  run_recalibration.py
report/: report.md
src/probforecast/: __init__.py  config.py
src/probforecast/data/: __init__.py  download.py  preprocess.py  schema.py  split.py  synthetic.py
src/probforecast/evaluation/: __init__.py  calibration.py  metrics.py  recalibration.py  rolling.py
src/probforecast/models/: __init__.py  arima_model.py  base.py  deepar_model.py  ets_model.py  seasonal_naive.py
src/probforecast/plotting/: __init__.py  architecture.py  calibration.py  forecasts.py  horizon.py  results_table.py
src/probforecast/utils/: __init__.py  reproducibility.py
tests/: conftest.py  test_smoke.py
tests/test_data/: test_preprocessing.py  test_schema.py  test_split_integrity.py
tests/test_evaluation/: test_calibration.py  test_metrics.py  test_recalibration.py
tests/test_models/: test_baselines.py  test_deepar.py
